--- a/public/index.html
+++ b/public/index.html
@@ -5,18 +5,18 @@
     <link rel="shortcut icon" href="/sc/favicon.ico" />
     <link rel="stylesheet" href="/sc/libjass.css" />
     <link rel="stylesheet" href="/sc/videojs.ass.css" />
-    <link rel="stylesheet" href="http://vjs.zencdn.net/5.10.7/video-js.css" />
+    <link rel="stylesheet" href="https://vjs.zencdn.net/8.10.0/video-js.css" />
     <script
-      src="http://code.jquery.com/jquery-1.9.1.js"
+      src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"
       type="text/javascript"
     >
     </script>
     <script 
-      src="http://vjs.zencdn.net/5.10.7/video.js"
+      src="https://vjs.zencdn.net/8.10.0/video.min.js"
       type="text/javascript"
     >
     </script>
-    <script src="http://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
+    <script src="https://vjs.zencdn.net/ie8/1.1.2/videojs-ie8.min.js"></script>
     <script src="/sc/libjass.js" type="text/javascript"></script>
     <script src="/sc/videojs.ass.js" type="text/javascript"></script>
     <script src="/sc/auth.js" type="text/javascript"></script>
