--- a/public/index.html
+++ b/public/index.html
@@ -5,14 +5,14 @@
     <link rel="shortcut icon" href="/sc/favicon.ico" />
     <link rel="stylesheet" href="/sc/libjass.css" />
     <link rel="stylesheet" href="/sc/videojs.ass.css" />
-    <link rel="stylesheet" href="https://vjs.zencdn.net/8.10.0/video-js.css" />
+    <link rel="stylesheet" href="https://vjs.zencdn.net/5.10.7/video-js.css" />
     <script
       src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"
       type="text/javascript"
     >
     </script>
     <script 
-      src="https://vjs.zencdn.net/8.10.0/video.min.js"
+      src="https://vjs.zencdn.net/5.10.7/video.js"
       type="text/javascript"
     >
     </script>
