--- a/public/index.html
+++ b/public/index.html
@@ -149,7 +149,7 @@
               }
             });
             // myPlayer.muted(true);
-            // myPlayer.play();
+            myPlayer.play();
             // myPlayer.requestFullscreen();
           }
         }
