--- a/public/index.html
+++ b/public/index.html
@@ -50,7 +50,7 @@
           "language":"es", 
           "preload": "auto", 
           "controls": true, 
-          "nativeControlsForTouch": false, 
+          "nativeControlsForTouch": true, 
           "fluid": true, 
           "aspectRatio": "16:9"
         }'
