--- a/public/index.html
+++ b/public/index.html
@@ -65,6 +65,13 @@
         myPlayer.play();
       }
 
+      // AUTOPLAY
+      $(window).click(function() {
+        if (myPlayer) {
+          myPlayer.play();
+        }
+      });
+
       // DETECTAR LA SAGA
       function handleSaga(saga) {
         switch (saga) {
@@ -149,7 +156,7 @@
               }
             });
             // myPlayer.muted(true);
-            myPlayer.play();
+            // myPlayer.play();
             // myPlayer.requestFullscreen();
           }
         }
