intento por mensajes

--- a/public/index.html
+++ b/public/index.html
@@ -68,9 +68,21 @@
       // AUTOPLAY
       $(window).click(function() {
         if (myPlayer) {
-          myPlayer.play();
+          if (myPlayer.paused()) {
+            myPlayer.play();
+          }
+          if (myPlayer.play()) {
+            myPlayer.paused();
+          }
         }
       });
+
+      // LOGICA DE CANALES
+      window.addEventListener('message', function(event) {
+        if (event.data.type === 'MiCanal') {
+          alert('Mensaje recibido desde Flutter: ' + event.data.message);
+        }
+      });      
 
       // DETECTAR LA SAGA
       function handleSaga(saga) {
