--- a/public/index.html
+++ b/public/index.html
@@ -117,7 +117,7 @@
         const videoID = urlParams.get('id');
         const defaultQuality = urlParams.get('quality');
         const sub = urlParams.get('sub');
-        const subtitle = "https://raw.githubusercontent.com/dariomadeira/SKTFS/master/"+handleSaga(saga)+"/"+saga.toUpperCase()+"_"+handleNumber(cap)+"_"+sub.toUpperCase()+".es.ass";
+        const subtitle = "https://raw.githubusercontent.com/dariomadeira/SKTFS/master/"+handleSaga(saga)+"/"+saga.toUpperCase()+"_"+handleNumber(cap)+"_"+sub.toUpperCase()+".ass";
 
         videojs('player').ready(function () {
           myPlayer = this;
